--- a/cities.html
+++ b/cities.html
@@ -27,7 +27,8 @@
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
-    <li>London   (8,982,000</li>
+    <li>London   (8,982,000)</li>
+    <li>Yerevan (1,075,000)</li>
   </ol>
 
 </body>
